Collected commonly used Chinese sentiment dictionaries, updated the stop word list, and completed the word splitting in data-preprocessing-01.

--- a/source/Data-PreProcessing-01.ipynb
+++ b/source/Data-PreProcessing-01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "61b67bb5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "import os\n",
     "import regex as re\n",
     "import string\n",
-    "import csv"
+    "import csv\n",
+    "import jieba"
    ]
   },
   {
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "29a4e4a7",
    "metadata": {},
    "outputs": [],
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "32be6a03",
    "metadata": {},
    "outputs": [],
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "4ee4815f",
    "metadata": {},
    "outputs": [],
@@ -137,10 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "ac15f508",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -188,53 +189,20 @@
        "      <th>4</th>\n",
        "      <td>花,Young的年华,年️日,月日,北京apm首层中庭,迎来位艺术家作品联展,春意盎然的️,...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10479</th>\n",
-       "      <td>商场好大,要不是朋友告诉我,穿过这个商场,就可以走到地铁</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10480</th>\n",
-       "      <td>年国庆成立年阅兵的时候这个商场刚刚开,那个时候这里全是高消费的地方,各种名牌荟聚,转眼已经多...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10481</th>\n",
-       "      <td>很久没有来东方广场了,今天路过来看看,硬件保持的还是挺好的,里面加了好多珠宝品牌,珠宝什么时...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10482</th>\n",
-       "      <td>嗨,就你,你快乐,新年到,马上就喜迎金鼠啦,现在在东方新天地,你可以遇到各种姿态的超萌的,跟...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10483</th>\n",
-       "      <td>新年前夕的东方新天地被色彩斑斓的图案装饰着,充满着节日的喜庆气氛,明年是鼠年,广场里的图案卡...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10484 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  review\n",
-       "0      特别赞的一家商场,在王府井这个商场云集和大牌云集的地方,apm商场算是人气特别高的了,交通,...\n",
-       "1      LINLEE在王府井apm也开新店了,超级喜欢他们家的口味,和朋友逛街无意看到的,果断去买一...\n",
-       "2      北京apm,东城区商场热门榜第一名️,王府井大街号,环境,商场环境干净整齐,布局分明,美食购...\n",
-       "3      一定要错过下午点半以后,不然吃饭只能排队等半个小时,而且拿到号了一定别因为还有十几桌就走开,...\n",
-       "4      花,Young的年华,年️日,月日,北京apm首层中庭,迎来位艺术家作品联展,春意盎然的️,...\n",
-       "...                                                  ...\n",
-       "10479                       商场好大,要不是朋友告诉我,穿过这个商场,就可以走到地铁\n",
-       "10480  年国庆成立年阅兵的时候这个商场刚刚开,那个时候这里全是高消费的地方,各种名牌荟聚,转眼已经多...\n",
-       "10481  很久没有来东方广场了,今天路过来看看,硬件保持的还是挺好的,里面加了好多珠宝品牌,珠宝什么时...\n",
-       "10482  嗨,就你,你快乐,新年到,马上就喜迎金鼠啦,现在在东方新天地,你可以遇到各种姿态的超萌的,跟...\n",
-       "10483  新年前夕的东方新天地被色彩斑斓的图案装饰着,充满着节日的喜庆气氛,明年是鼠年,广场里的图案卡...\n",
-       "\n",
-       "[10484 rows x 1 columns]"
+       "                                              review\n",
+       "0  特别赞的一家商场,在王府井这个商场云集和大牌云集的地方,apm商场算是人气特别高的了,交通,...\n",
+       "1  LINLEE在王府井apm也开新店了,超级喜欢他们家的口味,和朋友逛街无意看到的,果断去买一...\n",
+       "2  北京apm,东城区商场热门榜第一名️,王府井大街号,环境,商场环境干净整齐,布局分明,美食购...\n",
+       "3  一定要错过下午点半以后,不然吃饭只能排队等半个小时,而且拿到号了一定别因为还有十几桌就走开,...\n",
+       "4  花,Young的年华,年️日,月日,北京apm首层中庭,迎来位艺术家作品联展,春意盎然的️,..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +215,7 @@
     "df = pd.read_csv(merged_txt_path, delimiter='\\t', names=['review'])\n",
     "\n",
     "# Print the DataFrame\n",
-    "df"
+    "df.head(5)"
    ]
   },
   {
@@ -260,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "7fd2bb42",
    "metadata": {},
    "outputs": [],
@@ -293,41 +261,114 @@
    "id": "866bbc85",
    "metadata": {},
    "source": [
-    "## 5. Remove stopwords"
+    "## 5. Splitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67ce4203",
+   "metadata": {},
+   "source": [
+    "### Custom stopwords dictionary（two different versions）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
+   "id": "96cb12db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a list of file paths for the stop word files\n",
+    "stopword_paths = ['stopwords/source/hit_stopwords.txt', 'stopwords/source/scu_stopwords.txt', 'stopwords/source/baidu_stopwords.txt', 'stopwords/source/cn_stopwords.txt']\n",
+    "\n",
+    "# Read all stop words into a single list\n",
+    "stopwords = []\n",
+    "for path in stopword_paths:\n",
+    "    with open(path, 'r', encoding='utf-8') as f:\n",
+    "        # Read each line in the file, strip whitespace, and add the resulting words to the list\n",
+    "        words = [w.strip() for w in f.readlines()]\n",
+    "        stopwords.extend(words)\n",
+    "\n",
+    "# Remove duplicate stop words\n",
+    "stopwords = list(set(stopwords))\n",
+    "\n",
+    "# Write all stop words to a file\n",
+    "with open('stopwords/stopwords.txt', 'w', encoding='utf-8') as f:\n",
+    "    # Join the stop words into a single string separated by newlines, and write to the file\n",
+    "    f.write('\\n'.join(stopwords))\n",
+    "\n",
+    "# Read adverb words from file\n",
+    "adv_path = 'sentiment_dic/adv_dic.txt'\n",
+    "with open(adv_path, 'r', encoding='utf-8') as f:\n",
+    "    adverbs = [w.strip() for w in f.readlines()]\n",
+    "\n",
+    "# Remove adverb words from stopwords\n",
+    "stopwords = [w for w in stopwords if w not in adverbs]\n",
+    "\n",
+    "# Read negative words from file\n",
+    "neg_path = 'sentiment_dic/negative_dic.txt'\n",
+    "with open(neg_path, 'r', encoding='utf-8') as f:\n",
+    "    negatives = [w.strip() for w in f.readlines()]\n",
+    "\n",
+    "# Remove negative words from stopwords\n",
+    "stopwords = [w for w in stopwords if w not in negatives]\n",
+    "\n",
+    "# Sort the stop words alphabetically\n",
+    "stopwords.sort()\n",
+    "\n",
+    "# Write modified stop words to a file\n",
+    "with open('stopwords/stopwords_pro.txt', 'w', encoding='utf-8') as f:\n",
+    "    # Join the stop words into a single string separated by newlines, and write to the file\n",
+    "    f.write('\\n'.join(stopwords))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9dc630d",
+   "metadata": {},
+   "source": [
+    "### Split word processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "070f73dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the file paths to read from and write to\n",
     "input_file_paths = ['../data/review/reviews_1.txt', '../data/review/reviews_2.txt', '../data/review/reviews_3.txt', '../data/review/reviews_4.txt']\n",
-    "output_file_paths = ['../data/review/processed/processed_sw_1.txt', '../data/review/processed/processed_sw_2.txt', '../data/review/processed/processed_sw_3.txt', '../data/review/processed/processed_sw_4.txt']\n",
+    "output_directory = '../data/review/processed/'\n",
     "\n",
-    "# Define the paths to your custom stop word dictionaries\n",
-    "stopword_paths = ['stopwords/hit_stopwords.txt', 'stopwords/scu_stopwords.txt', 'stopwords/baidu_stopwords.txt', 'stopwords/cn_stopwords.txt']\n",
+    "# Set the file path for the stop words\n",
+    "stopword_path = 'stopwords/stopwords_pro.txt'\n",
     "\n",
-    "# Combine all stop word dictionaries into one set\n",
-    "stopwords = set([word.strip() for path in stopword_paths for word in open(path, 'r', encoding='utf-8')])\n",
+    "# Create a set of stop words by opening the file and using a set comprehension\n",
+    "with open(stopword_path, 'r', encoding='utf-8') as f:\n",
+    "    stopwords = {word.strip() for word in f}\n",
+    "\n",
+    "# Load the custom dictionary\n",
+    "custom_dict_path = 'stopwords/custom_dict.txt'\n",
+    "jieba.load_userdict(custom_dict_path)\n",
     "\n",
     "# Define a function to process each review text\n",
     "def process_text(text):\n",
-    "    # Remove all emoji\n",
-    "    text = re.sub(r'\\p{Emoji}', '', text)\n",
-    "    # Remove all punctuation\n",
-    "    text = re.sub(r'[^\\w\\s]+', '', text)\n",
-    "    # Remove stop words\n",
-    "    for word in stopwords:\n",
-    "        text = text.replace(word, '')\n",
+    "    # Tokenize the text with Jieba and enable HMM\n",
+    "    tokens = jieba.cut(text, cut_all=False, HMM=True)\n",
+    "    # Remove stop words and punctuation\n",
+    "    tokens = [token for token in tokens if token not in stopwords and token.strip() and not token.isnumeric()]\n",
     "    # Return the processed text as a string\n",
-    "    return text.strip()\n",
+    "    return ' '.join(tokens)\n",
     "\n",
     "# Loop over each file, process the review text and save it to a new text file\n",
-    "for i, input_file_path in enumerate(input_file_paths):\n",
-    "    with open(input_file_path, 'r', encoding='utf-8') as input_file, open(output_file_paths[i], 'w', encoding='utf-8') as output_file:\n",
+    "for input_file_path in input_file_paths:\n",
+    "    # Create the output file path\n",
+    "    output_file_path = os.path.join(output_directory, os.path.basename(input_file_path))\n",
+    "    # Open the input and output files\n",
+    "    with open(input_file_path, 'r', encoding='utf-8') as input_file, open(output_file_path, 'w', encoding='utf-8') as output_file:\n",
+    "        # Process each line of the input file\n",
     "        for line in input_file:\n",
     "            # Process the review text\n",
     "            processed_text = process_text(line.strip())\n",
