adjust and rerun content-mining-01, complete data-analysis-01 (comment text sentiment value calculation and analysis).

--- a/source/Data-Analysis-01.ipynb
+++ b/source/Data-Analysis-01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "06ec2db2",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
    "id": "0871f4a0",
    "metadata": {},
    "source": [
-    "## 2. Calculation of emotional value"
+    "## 2. Calculation of sentiment value score"
    ]
   },
   {
@@ -648,7 +648,7 @@
    "id": "4c69e350",
    "metadata": {},
    "source": [
-    "## 4. Data Analysis"
+    "## 4. Further data analysis"
    ]
   },
   {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "3113c081",
    "metadata": {},
    "outputs": [],
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "1321eb93",
    "metadata": {},
    "outputs": [],
@@ -708,6 +708,9 @@
     "        'polarity_snow_nlp': 'polarity_snownlp'\n",
     "    })\n",
     "    \n",
+    "    # Write the modified data back to the original CSV file\n",
+    "    df.to_csv(f'../data/review/analysis/reviews_{i}.csv', index=False)\n",
+    "    \n",
     "    # Add the DataFrame to the dictionary\n",
     "    dfs[f'reviews_{i}'] = df\n",
     "\n",
@@ -719,204 +722,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63b016d3",
+   "metadata": {},
+   "source": [
+    "### Consistency Check for Polarity Labeling of Review Texts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "c6083d67",
+   "execution_count": 28,
+   "id": "5c8584f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_columns(df, col1, col2):\n",
+    "    \"\"\"\n",
+    "    Compares two columns of a pandas DataFrame row by row to check if they are equal, and calculates the ratio \n",
+    "    of rows that are not equal.\n",
+    "\n",
+    "    Args:\n",
+    "        df: pandas DataFrame, the data to compare.\n",
+    "        col1: str, the name of the first column to compare.\n",
+    "        col2: str, the name of the second column to compare.\n",
+    "\n",
+    "    Returns:\n",
+    "        A percentage value of the number of rows that are not equal to the total number of rows in the DataFrame.\n",
+    "    \"\"\"\n",
+    "    # Create an empty list to store the row numbers where the two columns differ.\n",
+    "    diff_rows = []\n",
+    "    \n",
+    "    # Iterate over each row of the DataFrame and compare the values of the two specified columns.\n",
+    "    for i in range(len(df)):\n",
+    "        if df.loc[i, col1] != df.loc[i, col2]:\n",
+    "            # If the values are different, append the row number to the list of differing rows.\n",
+    "            diff_rows.append(i)\n",
+    "\n",
+    "    # Calculate the percentage of rows that are different between the two columns.\n",
+    "    diff_ratio = len(diff_rows) / len(df) * 100\n",
+    "\n",
+    "    # Print the results of the comparison.\n",
+    "    if len(diff_rows) == 0:\n",
+    "        print(f\"{col1} 和 {col2} 两列数据完全一致\")\n",
+    "    else:\n",
+    "        print(f\"{col1} 和 {col2} 两列数据共有 {len(diff_rows)} 行不一致，占全部行数的 {diff_ratio:.2f}%，即两种算法于该数据集表现出的一致性为 {100 - diff_ratio:.2f}%\")\n",
+    "\n",
+    "    # Return the percentage of differing rows.\n",
+    "    return diff_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "15b00d31",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "polarity 和 polarity_snownlp 两列数据共有 1165 行不一致，占全部行数的 27.36%，即两种算法于该数据集表现出的一致性为 72.64%\n",
+      "polarity 和 polarity_snownlp 两列数据共有 691 行不一致，占全部行数的 21.79%，即两种算法于该数据集表现出的一致性为 78.21%\n",
+      "polarity 和 polarity_snownlp 两列数据共有 512 行不一致，占全部行数的 28.65%，即两种算法于该数据集表现出的一致性为 71.35%\n",
+      "polarity 和 polarity_snownlp 两列数据共有 343 行不一致，占全部行数的 27.05%，即两种算法于该数据集表现出的一致性为 72.95%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate consistency ratio for four dataframes by comparing two columns using 'compare_columns' function.\n",
+    "diff_ratio_1 = compare_columns(reviews_1_df, 'polarity', 'polarity_snownlp')\n",
+    "diff_ratio_2 = compare_columns(reviews_2_df, 'polarity', 'polarity_snownlp')\n",
+    "diff_ratio_3 = compare_columns(reviews_3_df, 'polarity', 'polarity_snownlp')\n",
+    "diff_ratio_4 = compare_columns(reviews_4_df, 'polarity', 'polarity_snownlp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9ff5ac6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall consistency: 73.79%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the average difference ratio by adding the four ratios and dividing by four.\n",
+    "diff_ratios = [diff_ratio_1, diff_ratio_2, diff_ratio_3, diff_ratio_4]\n",
+    "avg_ratio = sum(diff_ratios) / len(diff_ratios)\n",
+    "\n",
+    "# Print the average difference ratio as a percentage with two decimal places.\n",
+    "print(f\"Overall consistency: {100 - avg_ratio:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7cd5c63",
+   "metadata": {},
+   "source": [
+    "### Calculate the distribution of review text polarity (in percentages) for the four stores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7830e95f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function calculates the percentage of each unique value in a given column of a DataFrame\n",
+    "def calculate_percentages(df, column_name):\n",
+    "    # Count the number of occurrences of each unique value in the specified column\n",
+    "    counts = df[column_name].value_counts()\n",
+    "\n",
+    "    # Calculate the percentage of each unique value in relation to the total number of values in the column\n",
+    "    percentages = counts / counts.sum() * 100\n",
+    "\n",
+    "    # Return the percentages\n",
+    "    return percentages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3b95b731",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "北京APM：\n",
+      "P    75.598873\n",
+      "N    13.785815\n",
+      "I    10.615312\n",
+      "Name: polarity, dtype: float64\n",
+      "王府中环：\n",
+      "P    82.749921\n",
+      "N    10.028382\n",
+      "I     7.221697\n",
+      "Name: polarity, dtype: float64\n",
+      "王府井百货：\n",
+      "P    73.363179\n",
+      "N    15.836598\n",
+      "I    10.800224\n",
+      "Name: polarity, dtype: float64\n",
+      "东方新天地：\n",
+      "P    73.974763\n",
+      "N    14.826498\n",
+      "I    11.198738\n",
+      "Name: polarity, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call the calculate_percentages function for each DataFrame to get the percentage of each unique value in the \"polarity\" column\n",
+    "percentages_1 = calculate_percentages(reviews_1_df, \"polarity\")\n",
+    "percentages_2 = calculate_percentages(reviews_2_df, \"polarity\")\n",
+    "percentages_3 = calculate_percentages(reviews_3_df, \"polarity\")\n",
+    "percentages_4 = calculate_percentages(reviews_4_df, \"polarity\")\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"北京APM：\")\n",
+    "print(percentages_1)\n",
+    "\n",
+    "print(\"王府中环：\")\n",
+    "print(percentages_2)\n",
+    "\n",
+    "print(\"王府井百货：\")\n",
+    "print(percentages_3)\n",
+    "\n",
+    "print(\"东方新天地：\")\n",
+    "print(percentages_4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "857b3178",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>review</th>\n",
-       "      <th>review_splitting</th>\n",
-       "      <th>senti_score</th>\n",
-       "      <th>polarity</th>\n",
-       "      <th>senti_score_snownlp</th>\n",
-       "      <th>polarity_snownlp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>特别赞的一家商场,在王府井这个商场云集和大牌云集的地方,apm商场算是人气特别高的了,交通,...</td>\n",
-       "      <td>特别 赞 一家 商场 王府井 商场 云集 大牌 云集 地方 apm 商场 算是 人气 特别 ...</td>\n",
-       "      <td>18.25</td>\n",
-       "      <td>P</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LINLEE在王府井apm也开新店了,超级喜欢他们家的口味,和朋友逛街无意看到的,果断去买一...</td>\n",
-       "      <td>LINLEE 王府井 apm 开 新店 超级 喜欢 家 口味 朋友 逛街 无意 果断 买 一...</td>\n",
-       "      <td>10.30</td>\n",
-       "      <td>P</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>北京apm,东城区商场热门榜第一名️,王府井大街号,环境,商场环境干净整齐,布局分明,美食购...</td>\n",
-       "      <td>北京 apm 东城区 商场 热门 榜 第一名 ️ 王府井大街 号 环境 商场 环境 干净 整...</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>P</td>\n",
-       "      <td>0.999969</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>一定要错过下午点半以后,不然吃饭只能排队等半个小时,而且拿到号了一定别因为还有十几桌就走开,...</td>\n",
-       "      <td>错过 下午 点半 吃饭 只能 排队 半个 小时 拿到 号 别 十几桌 走开 过 号 好久\\n</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>I</td>\n",
-       "      <td>0.016099</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>花,Young的年华,年️日,月日,北京apm首层中庭,迎来位艺术家作品联展,春意盎然的️,...</td>\n",
-       "      <td>花 Young 年华 年 ️ 日 月 日 北京 apm 首层 中庭 迎来 位 艺术家 作品 ...</td>\n",
-       "      <td>7.00</td>\n",
-       "      <td>P</td>\n",
-       "      <td>0.999991</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4253</th>\n",
-       "      <td>在王府井较大的商场,亮堂宽敞,品牌云集,原来叫新东安商场,周围也云集了很多商场,商场之间有些...</td>\n",
-       "      <td>王府井 较大 商场 亮堂 宽敞 品牌 云集 新东安 商场 云集 商场 商场 之间 有些 差异...</td>\n",
-       "      <td>-2.30</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0.999937</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4254</th>\n",
-       "      <td>新年伊始,出门看个天使陷落,打卡完小吃,正好到最近的apm百老汇,王府井的老商场了,各种品牌...</td>\n",
-       "      <td>新年伊始 出门 看个 天使 陷落 打卡 完 小吃 正好 apm 百老汇 王府井 老 商场 品...</td>\n",
-       "      <td>2.60</td>\n",
-       "      <td>P</td>\n",
-       "      <td>0.999997</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4255</th>\n",
-       "      <td>常去apm不是为逛街,主要为了吃,当然吃完也要逛逛消食,北京apm,新东安广场,地处北京王府...</td>\n",
-       "      <td>常去 apm 不是 逛街 吃 吃 完 逛逛 消食 北京 apm 新东安 广场 地处 北京王府...</td>\n",
-       "      <td>6.20</td>\n",
-       "      <td>P</td>\n",
-       "      <td>0.999995</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4256</th>\n",
-       "      <td>王府井apm经常和媳妇儿过来逛因为有的吃有的逛而且媳妇儿喜欢这儿的外婆家这次过来是陪朋友买手...</td>\n",
-       "      <td>王府井 apm 媳妇儿 逛 吃 逛 媳妇儿 喜欢 外婆家 陪 朋友 买手机 顺便 逛逛 媳妇...</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>P</td>\n",
-       "      <td>0.977859</td>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4257</th>\n",
-       "      <td>北京王府井商业区里的新成员,商场里入住了很多店铺,有卖衣服的,鞋子的,首饰的,当然也少不了很...</td>\n",
-       "      <td>北京王府井 商业区 里 新 成员 商场 里 入住 店铺 卖 衣服 鞋子 首饰 少不了 很多很...</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>P</td>\n",
-       "      <td>0.197848</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4258 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                 review  \\\n",
-       "0     特别赞的一家商场,在王府井这个商场云集和大牌云集的地方,apm商场算是人气特别高的了,交通,...   \n",
-       "1     LINLEE在王府井apm也开新店了,超级喜欢他们家的口味,和朋友逛街无意看到的,果断去买一...   \n",
-       "2     北京apm,东城区商场热门榜第一名️,王府井大街号,环境,商场环境干净整齐,布局分明,美食购...   \n",
-       "3     一定要错过下午点半以后,不然吃饭只能排队等半个小时,而且拿到号了一定别因为还有十几桌就走开,...   \n",
-       "4     花,Young的年华,年️日,月日,北京apm首层中庭,迎来位艺术家作品联展,春意盎然的️,...   \n",
-       "...                                                 ...   \n",
-       "4253  在王府井较大的商场,亮堂宽敞,品牌云集,原来叫新东安商场,周围也云集了很多商场,商场之间有些...   \n",
-       "4254  新年伊始,出门看个天使陷落,打卡完小吃,正好到最近的apm百老汇,王府井的老商场了,各种品牌...   \n",
-       "4255  常去apm不是为逛街,主要为了吃,当然吃完也要逛逛消食,北京apm,新东安广场,地处北京王府...   \n",
-       "4256  王府井apm经常和媳妇儿过来逛因为有的吃有的逛而且媳妇儿喜欢这儿的外婆家这次过来是陪朋友买手...   \n",
-       "4257  北京王府井商业区里的新成员,商场里入住了很多店铺,有卖衣服的,鞋子的,首饰的,当然也少不了很...   \n",
-       "\n",
-       "                                       review_splitting  senti_score polarity  \\\n",
-       "0     特别 赞 一家 商场 王府井 商场 云集 大牌 云集 地方 apm 商场 算是 人气 特别 ...        18.25        P   \n",
-       "1     LINLEE 王府井 apm 开 新店 超级 喜欢 家 口味 朋友 逛街 无意 果断 买 一...        10.30        P   \n",
-       "2     北京 apm 东城区 商场 热门 榜 第一名 ️ 王府井大街 号 环境 商场 环境 干净 整...         4.00        P   \n",
-       "3        错过 下午 点半 吃饭 只能 排队 半个 小时 拿到 号 别 十几桌 走开 过 号 好久\\n         0.00        I   \n",
-       "4     花 Young 年华 年 ️ 日 月 日 北京 apm 首层 中庭 迎来 位 艺术家 作品 ...         7.00        P   \n",
-       "...                                                 ...          ...      ...   \n",
-       "4253  王府井 较大 商场 亮堂 宽敞 品牌 云集 新东安 商场 云集 商场 商场 之间 有些 差异...        -2.30        N   \n",
-       "4254  新年伊始 出门 看个 天使 陷落 打卡 完 小吃 正好 apm 百老汇 王府井 老 商场 品...         2.60        P   \n",
-       "4255  常去 apm 不是 逛街 吃 吃 完 逛逛 消食 北京 apm 新东安 广场 地处 北京王府...         6.20        P   \n",
-       "4256  王府井 apm 媳妇儿 逛 吃 逛 媳妇儿 喜欢 外婆家 陪 朋友 买手机 顺便 逛逛 媳妇...         1.00        P   \n",
-       "4257  北京王府井 商业区 里 新 成员 商场 里 入住 店铺 卖 衣服 鞋子 首饰 少不了 很多很...         1.00        P   \n",
-       "\n",
-       "      senti_score_snownlp polarity_snownlp  \n",
-       "0                1.000000                P  \n",
-       "1                1.000000                P  \n",
-       "2                0.999969                P  \n",
-       "3                0.016099                N  \n",
-       "4                0.999991                P  \n",
-       "...                   ...              ...  \n",
-       "4253             0.999937                P  \n",
-       "4254             0.999997                P  \n",
-       "4255             0.999995                P  \n",
-       "4256             0.977859                P  \n",
-       "4257             0.197848                N  \n",
-       "\n",
-       "[4258 rows x 6 columns]"
+       "P    3219\n",
+       "N     587\n",
+       "I     452\n",
+       "Name: polarity, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews_1_df"
+    "reviews_1_df[\"polarity\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4319859f",
+   "metadata": {},
+   "source": [
+    "### Calculate the Mean value of sentiment_score for the four stores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d0270691",
+   "execution_count": 44,
+   "id": "a73e0ae8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of 'senti_score' column for reviews_1: 4.27\n",
+      "Mean of 'senti_score' column for reviews_2: 5.00\n",
+      "Mean of 'senti_score' column for reviews_3: 3.22\n",
+      "Mean of 'senti_score' column for reviews_4: 3.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loop through each DataFrame in the dictionary and calculate the average of the 'senti_score' column\n",
+    "for name, df in dfs.items():\n",
+    "    senti_score_mean = df['senti_score'].mean()\n",
+    "    print(f\"Mean of 'senti_score' column for {name}: {senti_score_mean:.2f}\")"
+   ]
   }
  ],
  "metadata": {
