classify and store review texts by polarity, complete data-analysis-02 (LDA topic modeling and analysis).

--- a/source/Data-Analysis-01.ipynb
+++ b/source/Data-Analysis-01.ipynb
@@ -10,14 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "id": "06ec2db2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "import os\n",
+    "import jieba\n",
     "import pandas as pd\n",
-    "from snownlp import SnowNLP"
+    "from snownlp import SnowNLP\n",
+    "import csv"
    ]
   },
   {
@@ -661,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "id": "3113c081",
    "metadata": {},
    "outputs": [],
@@ -679,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "id": "1321eb93",
    "metadata": {},
    "outputs": [],
@@ -708,12 +711,40 @@
     "        'polarity_snow_nlp': 'polarity_snownlp'\n",
     "    })\n",
     "    \n",
-    "    # Write the modified data back to the original CSV file\n",
-    "    df.to_csv(f'../data/review/analysis/reviews_{i}.csv', index=False)\n",
-    "    \n",
     "    # Add the DataFrame to the dictionary\n",
-    "    dfs[f'reviews_{i}'] = df\n",
-    "\n",
+    "    dfs[f'reviews_{i}'] = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "74b8fbcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove newline characters from the \"review\" and \"review_splitting\" columns\n",
+    "for key in dfs.keys():\n",
+    "    # Get the current DataFrame\n",
+    "    review = dfs[key]\n",
+    "    \n",
+    "    # Select the columns to remove newline characters from\n",
+    "    columns_to_clean = ['review', 'review_splitting']\n",
+    "    \n",
+    "    # Use str.replace() method to remove newline characters\n",
+    "    for col in columns_to_clean:\n",
+    "        review[col] = review[col].str.replace('\\n', '')\n",
+    "        \n",
+    "    # Save the modified DataFrame back to the original CSV file\n",
+    "    review.to_csv(f'../data/review/analysis/{key}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "a268c2a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Assign DataFrames to variables\n",
     "reviews_1_df = dfs['reviews_1']\n",
     "reviews_2_df = dfs['reviews_2']\n",
@@ -731,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 97,
    "id": "5c8584f8",
    "metadata": {},
    "outputs": [],
@@ -773,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 98,
    "id": "15b00d31",
    "metadata": {
     "scrolled": true
@@ -800,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 99,
    "id": "9ff5ac6f",
    "metadata": {},
    "outputs": [
@@ -831,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
    "id": "7830e95f",
    "metadata": {},
    "outputs": [],
@@ -850,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 101,
    "id": "3b95b731",
    "metadata": {
     "scrolled": false
@@ -906,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 102,
    "id": "857b3178",
    "metadata": {},
    "outputs": [
@@ -919,7 +950,7 @@
        "Name: polarity, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 103,
    "id": "a73e0ae8",
    "metadata": {},
    "outputs": [
@@ -958,6 +989,124 @@
     "for name, df in dfs.items():\n",
     "    senti_score_mean = df['senti_score'].mean()\n",
     "    print(f\"Mean of 'senti_score' column for {name}: {senti_score_mean:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dce5ec0e",
+   "metadata": {},
+   "source": [
+    "## 5. Store comment text in categories based on polarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "481ac315",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# for key in dfs.keys():\n",
+    "#     # Get the current DataFrame\n",
+    "#     review = dfs[key]\n",
+    "    \n",
+    "#     # Group the DataFrame by the \"polarity\" column\n",
+    "#     groups = review.groupby('polarity')\n",
+    "    \n",
+    "#     # Extract DataFrames for \"P\" and \"N\" polarities from the groups\n",
+    "#     review_p = groups.get_group('P')\n",
+    "#     review_n = groups.get_group('N')\n",
+    "    \n",
+    "#     # Select only the \"review\" column and write it to a txt file\n",
+    "#     review_p['review'].to_csv(f'../data/review/analysis/polarity/{key}_polarity_P.txt', index=False, header=False)\n",
+    "#     review_n['review'].to_csv(f'../data/review/analysis/polarity/{key}_polarity_N.txt', index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "59e15304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in dfs.keys():\n",
+    "    # Get the current DataFrame\n",
+    "    review = dfs[key]\n",
+    "    \n",
+    "    # Group the DataFrame by the \"polarity\" column\n",
+    "    groups = review.groupby('polarity')\n",
+    "    \n",
+    "    # Extract DataFrames for \"P\" and \"N\" polarities from the groups\n",
+    "    review_p = groups.get_group('P')\n",
+    "    review_n = groups.get_group('N')\n",
+    "    \n",
+    "    # Select only the \"review splitting\" column and write it to a txt file\n",
+    "    review_p['review_splitting'].to_csv(f'../data/review/analysis/polarity/{key}_polarity_P.txt', index=False, header=False)\n",
+    "    review_n['review_splitting'].to_csv(f'../data/review/analysis/polarity/{key}_polarity_N.txt', index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d830262",
+   "metadata": {},
+   "source": [
+    "## 6. Splitting text into words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "f40085d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Set the file path for the stop words\n",
+    "# stopword_path = 'stopwords/stopwords.txt'\n",
+    "\n",
+    "# # Create a set of stop words by opening the file and using a set comprehension\n",
+    "# with open(stopword_path, 'r', encoding='utf-8') as f:\n",
+    "#     stopwords = {word.strip() for word in f}\n",
+    "\n",
+    "# # Load the custom dictionary\n",
+    "# custom_dict_path = 'stopwords/custom_dict.txt'\n",
+    "# jieba.load_userdict(custom_dict_path)\n",
+    "\n",
+    "# # Define a function to process each review text\n",
+    "# def process_text(text):\n",
+    "#     # Tokenize the text with Jieba and enable HMM\n",
+    "#     tokens = jieba.cut(text, cut_all=False, HMM=True)\n",
+    "#     # Remove stop words and punctuation\n",
+    "#     tokens = [token for token in tokens if token not in stopwords and token.strip() and not token.isnumeric()]\n",
+    "#     # Return the processed text as a string\n",
+    "#     return ' '.join(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "d0d48067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Set the directory path to the review files\n",
+    "# dir_path = '../data/review/analysis/polarity'\n",
+    "\n",
+    "# # Loop through each file in the directory\n",
+    "# for filename in os.listdir(dir_path):\n",
+    "#     # Check if the file is a txt file\n",
+    "#     if filename.endswith('.txt'):\n",
+    "#         # Construct the file path\n",
+    "#         file_path = os.path.join(dir_path, filename)\n",
+    "#         # Read in the contents of the file\n",
+    "#         with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "#             text = f.read()\n",
+    "#         # Process the text using the process_text function\n",
+    "#         processed_text = process_text(text)\n",
+    "#         # Write the processed text back to the file\n",
+    "#         with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "#             f.write(processed_text)"
    ]
   }
  ],
